# webgpu

./: .gitignore  CMakeLists.txt  README.md
src/: .clangd  application.cpp  application.hpp  compile_flags.txt  main.cpp  webgpu-utils.cpp  webgpu-utils.h
